--- a/Tarea1Redes/agregarcontacto.html
+++ b/Tarea1Redes/agregarcontacto.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Inicio</title>
+    <title>Agregar Contacto</title>
     <style>
 
     	.jumbotron{
@@ -45,19 +45,22 @@
 
   	<div class="container">
   		<div class="jumbotron">
-        	<h1>Contactos</h1>
-        	<div class="list-group">
-  				<a href="#" class="list-group-item active">Cras justo odio</a>
-  				<a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-  				<a href="#" class="list-group-item">Morbi leo risus</a>
-  				<a href="#" class="list-group-item">Porta ac consectetur ac</a>
-  				<a href="#" class="list-group-item">Vestibulum at eros</a>
-  			</div>
+        	<h1>Ingrese los datos</h1>
+        	<div class="form-group">
+            <form action="index.html" method="post" id="datos">
+              <label for="nombre">Nombre:</label>
+              <input type="text" id="nombre" placeholder="Nombre"></br>
+              <label for="nombre">IP:</label>
+              <input type="text" id="ip" placeholder="IP"></br>
+              <label for="nombre">Puerto:</label>
+              <input type="text" id="puerto" placeholder="Puerto"></br>
+              <div class="btn-group btn-group-lg">
+                <button type="button" class="btn btn-primary" onclick="window.location.href='index.html'">Agregar</button>
+              </div>
+            </form>
+          </div>
 
-
-    		<div class="btn-group btn-group-lg">
-  				<button type="button" class="btn btn-primary" onclick="window.location.href='agregarcontacto.html'">Nuevo contacto</button>
-  			</div>
+    		
     	</div>
 
 
