toy hasta el pico

--- a/Tarea1Redes/index.html
+++ b/Tarea1Redes/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Prueba</title>
-</head>
+	<title>Tula Pirula</title>
+<head>
 <body>
-	<a href="agregarcontacto.html">Ano</a>
+	<h1>prueba 1</h1>
 </body>
 </html>
