--- a/Tarea1Redes/index.html
+++ b/Tarea1Redes/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -47,11 +47,7 @@
   		<div class="jumbotron">
         	<h1>Contactos</h1>
         	<div class="list-group">
-  				<a href="#" class="list-group-item active">Cras justo odio</a>
-  				<a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-  				<a href="#" class="list-group-item">Morbi leo risus</a>
-  				<a href="#" class="list-group-item">Porta ac consectetur ac</a>
-  				<a href="#" class="list-group-item">Vestibulum at eros</a>
+  			<object type="text/html" data="Contactos.txt"></object>
   			</div>
 
 
